@@ -1,5 +1,10 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-10-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* configure.in, msvc6/Makefile.am, msvc6/testDLL/Makefile.am,
+	msvc6/testMain/Makefile.am, msvc6/testNTEventLog/Makefile.am,
+	msvc6/testPattern/Makefile.am: added missing makefiles.
+
 2002-09-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* src/StringUtil.hh: fix compilation problem on Sun CC 5.3 
 	(bug #614903).
